# matrix

./: .gitignore  CMakeLists.txt  LICENSE  LieGroup.hpp  README.md  SO3.hpp  UR5.py  benchmark.cpp  data.txt  expr.hpp  log_server.py  main.cpp  matrix.hpp  ppxlog.cpp  robotics.cpp  robotics.h  robotics.hpp  show_trajectory.py  show_trans.py  signals.py  test.cpp
.github/workflows/: coverage.yml  main.yml
benchmark/: CMakeLists.txt  benchmark.cpp
demo/: CMakeLists.txt  benchmark.cpp  main.cpp  ppxlog.cpp  ppxlog.h  robotics.hpp
docs/: Chapter 0. Finite Accuracy Calculation.md  Chapter 1. Basic Linear Algebra.md  Chapter 4.md  chapter1.tex  chapter4.tex  ppx Reference Manual.md  references.bib  template.tex
include/: algorithm.hpp  algorithm1.hpp  algorithm2.hpp  algorithm3.hpp  asmext.hpp  expr.hpp  expr_tmpl.hpp  exprtmpl.hpp  liegroup.hpp  linalg.hpp  matrix.hpp  matrixd.hpp  matrixs.hpp  optimization.hpp  ppxlog.h  robotics.hpp  signals.hpp  statistics.hpp
log/: CMakeLists.txt  plog.cpp  plog.h
misc/: benchmark.cpp
test/: CMakeLists.txt  CodeCoverage.cmake  lie_test.cpp  log_test.cpp  matrix_test.cpp  opt_test.cpp  signals_test.cpp  solver_test.cpp  statistic.cpp  statistic_test.cpp
tools/: gnuplot.mplstyle  misc.py
