set(SUBPRJ "ppx_bench")
message(STATUS "---------------------------")
message(STATUS "Current : ${SUBPRJ}")
add_executable(ppx_bench benchmark.cpp)
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  target_link_libraries(ppx_bench PRIVATE ppx pthread benchmark::benchmark)
  else()
  target_link_libraries(ppx_bench PRIVATE ppx benchmark::benchmark)
  endif()
if(MSVC)
  # target_compile_options(ppx_main PRIVATE /W4)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
  target_compile_options(ppx_bench PRIVATE -Wall -Wextra -pedantic)
endif()