set(SUBPRJ "demo")
message(STATUS "---------------------------")
message(STATUS "Current : ${SUBPRJ}")
add_executable(demo ppxlog.cpp main.cpp)
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  target_link_libraries(demo PRIVATE ppx pthread)
  else()
  target_link_libraries(demo PRIVATE ppx)
  endif()
if(MSVC)
  # target_compile_options(ppx_main PRIVATE /W4)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
  target_compile_options(demo PRIVATE -Wall -Wextra -pedantic)
endif()